--- a/rewrite/MyBind.html
+++ b/rewrite/MyBind.html
@@ -3,7 +3,7 @@
  * @Date: 2021-03-01 14:24:21
  * @LastEditTime: 2021-03-01 14:26:38
  * @LastEditors: Please set LastEditors
- * @Description: In User Settings Edit
+ * @Description: MyBind
  * @FilePath: \study\MyBind.html
 -->
 <!DOCTYPE html>
