--- a/rewrite/MyApply.html
+++ b/rewrite/MyApply.html
@@ -1,9 +1,9 @@
 <!--
  * @Author: your name
  * @Date: 2021-03-01 14:18:56
- * @LastEditTime: 2021-03-01 14:23:06
+ * @LastEditTime: 2021-03-01 14:48:05
  * @LastEditors: Please set LastEditors
- * @Description: In User Settings Edit
+ * @Description: MyApply
  * @FilePath: \study\MyApply.html
 -->
 <!DOCTYPE html>
