--- a/rewrite/MyVue.html
+++ b/rewrite/MyVue.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-03-04 08:54:44
- * @LastEditTime: 2021-03-04 13:41:30
+ * @LastEditTime: 2021-03-04 13:45:09
  * @LastEditors: Please set LastEditors
  * @Description: vue重写
  * @FilePath: \study\rewrite\MyVue.html
@@ -46,6 +46,7 @@
                     new Watch(updateView, true)
                 }
             }
+            // 监听数据
             class Observer {
                 constructor(data) {
                     this.walk(data)
@@ -57,6 +58,7 @@
                     }
                 }
             }
+            // 监听视图
             class Watch {
                 constructor(expOrFn, isRender) {
                     this.getter = expOrFn
@@ -71,17 +73,20 @@
                     this.get()
                 }
             }
+            // 依赖
             class Dep {
                 constructor() {
                     this.id = uid++
                     this.subs = []
 
                 }
+                // 添加依赖
                 depend() {
                     if (Dep.target) {
                         this.subs.push(Dep.target)
                     }
                 }
+                // 通知更新
                 notify() {
                     let subs = this.subs.slice()
                     for (let i = 0; i < subs.length; i++) {
@@ -98,6 +103,7 @@
                     configurable: true,
                     enumerable: true,
                     get() {
+                        // 若存在target先添加依赖
                         if (Dep.target) {
                             dep.depend()
                         }
@@ -106,6 +112,7 @@
                     set(nval) {
                         if (val === nval) return
                         val = nval
+                        // 通知更新
                         dep.notify()
                     }
                 })
